# MyInterpreter

./: CMakeLists.txt  README.md  project.cmake
src/: main.cpp
src/Interpreter/: Interpreter.cpp  Interpreter.hpp  Tokenizer.hpp
src/Interpreter/Lexer/: Lexer.cpp  Lexer.hpp  tokens.hpp
src/error/: error.h
